      when storing src.rpm files rather than their contents.  The fix
      worked for local builds but not for commits to repositories.
      Conary 1.0.26 includes a fix that corrects the behavior when
      committing to a repository as well. (CNY-684)
    * A bug that prevented flavored redirects from being loaded from
      the repository database has been fixed.

Changes in 1.0.25:
  o Build Changes:
    * The addArchive() source action will search for reasonably-named
      archive files based on the name and version if given a URL ending
      with a "/" character. Thanks to Pavel Volkovitskiy for the
      initial implementation. (CNY-671)
    * All source actions, when given a URL that starts with "mirror://",
      will search a set of mirrors based on files in the mirrorDirs
      configuration entry, with default files provided in the
      /etc/conary/mirrors/ directory. Thanks to Pavel Volkovitskiy for
      the initial implementation. (CNY-171)
    * Symbolic links are now allowed to provide a soname even if they
      reference an ELF file only indirectly through other symbolic
      links.  Previously, a symbolic link could only provide a soname
      if it directly referenced an ELF file. (CNY-696)

  o Bug Fixes:
    * A bug that caused unhandled exceptions when downloading the file
      contents needed for a distributed changeset in threaded mode has
      been fixed. This bug was introduced in 1.0.24. (CNY-701)

Changes in 1.0.24:
  o Server Changes:
    * The server binary access log can now be downloaded by an
      administrator by visiting the http://servername/conary/log
      URL. Once the log is accessed it is rotated automatically by the
      repository server. Subsequent accesses to the log URL will only
      yield log entries added since the last access. (CNY-638)
    * The Users and Groups tab in the web management UI is no longer
      highlighted when administrators change their passwords.

  o Client Changes: